# mlops_poetry

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  data.dvc  get_data.py  hw_task.dvc  infer.py  pyproject.toml  train.py
.dvc/: config
