[tool.poetry]
name = "hw-task"
version = "0.1.0"
description = ""
authors = ["Danila <danilaanis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dvc = "^3.34.0"
dvc-gdrive = "^3.0.0"
pandas = "^2.1.4"
mlflow = "^2.9.2"
nltk = "^3.8.1"
scikit-learn = "^1.3.2"
pre-commit = "^3.6.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-ignore = ["E203", "E722"]
exclude = [".git","__pycache__","old","build","dist"]
max-line-length = 90
max-complexity = 10

[tool.isort]
atomic = true
profile = "black"
line_length = 130
skip_gitignore = true
